--- a/.editorconfig
+++ b/.editorconfig
@@ -16,5 +16,5 @@ max_line_length = 119
 indent_style = tab
 insert_final_newline = false
 
-[{*.yaml,*.yml}]
+[{*.yaml,*.yml,*.ksy}]
 indent_size = 2
